--- a/.env-example
+++ b/.env-example
@@ -1,8 +1,8 @@
 LOG_LEVEL=DEBUG
 CONFIG_FILE=config-local.yaml
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=ap-southeast-2
+TF_VAR_aws_access_key_id=
+TF_VAR_aws_secret_access_key=
+TF_VAR_linode_token=
 AWS_REGION=ap-southeast-2
 AWS_ACCOUNT=814504268053
 FLASK_ENV=development
