--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,12 +45,12 @@ services:
       context: ./web
       dockerfile: docker/Dockerfile
       args:
-        COMMON_VERSION: ${COMMON_VERSION}
+        TRIVIALSEC_PY_LIB_VER: ${TRIVIALSEC_PY_LIB_VER}
     environment:
       - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-    entrypoint: python3.8
+    entrypoint: python3
     command: ["-u", "-d", "-X", "dev", "run.py"]
     ports:
       - 5000:5000
@@ -158,7 +158,7 @@ services:
       context: ./workers
       dockerfile: docker/Dockerfile
       args:
-        COMMON_VERSION: ${COMMON_VERSION}
+        TRIVIALSEC_PY_LIB_VER: ${TRIVIALSEC_PY_LIB_VER}
     depends_on:
       - mysql
       - sockets
